syntax = "proto3";

option csharp_namespace = "GrpcAuth";

package AuthService;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string message = 1;
}

service Login {
    rpc LoginUser (LoginRequest) returns (LoginResponse) {}
}